...
          child: Container(
            padding: const EdgeInsets.all(40),
            child: Column(
              children: [
                Expanded(
                  child: TextField(
                    key: const ValueKey("enterTask"),
                    // textAlign: TextAlign.center,
                    decoration: const InputDecoration(
                      hintText: "Enter you task.",
                      border: InputBorder.none,
                      focusedBorder: InputBorder.none,
                    ),
...
                    ),
                    
                    ElevatedButton(
                      style: ElevatedButton.styleFrom(
                        primary: Colors.green
                      ),
                      child: const Text('Add'),
                        
                      onPressed: () {
                        todoController.todos.add(
                          Todo(
                            title: textEditingController.text,
                          ),
...
